# stormyscraper

./: Cargo.toml  LICENSE-MIT  stormyscraper.json
.github/workflows/: ci.yaml
lib/stormyconfig/: Cargo.toml
lib/stormyconfig/src/: lib.rs
lib/stormycore/: Cargo.toml
lib/stormycore/src/: lib.rs
lib/stormyevent/: Cargo.toml
lib/stormyevent/src/: lib.rs
lib/stormyodds/: Cargo.toml
lib/stormyodds/src/: lib.rs  moneyline.rs  over_under.rs  spread.rs
lib/stormyscraper/: Cargo.toml
lib/stormyscraper/src/: lib.rs
migrations/: 20230919002357_initial-mlb-odds-table.sql
src/: config.rs  errors.rs  fetch_url.rs  lib.rs  main.rs  runtime.rs  scaper.rs  sportsbook.rs
src/endpoints/: draftkings.rs  mod.rs
src/game_types/: mod.rs  team_game.rs
src/games/: mlb.rs  mod.rs
src/leagues/: mlb.rs  mod.rs
src/odds_types/: mod.rs  moneyline.rs  over_under.rs  spread.rs
