[package]
name = "stormyscraper"
description = "crate for parsing odds from different oddsmakers"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Casey <patrick.casey1@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["postgres"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "stormyscraper"
path = "src/main.rs"
